[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "mypy>=1.17.1",
    "numpy>=2.3.2",
    "pygame>=2.6.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250809",
]

[tool.setuptools.packages.find]
include = ["rl*", "grid_world*"]
